<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>petra_patient_monitoring</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="zaan0001@hs-karlsruhe.de">andreas</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>petra_core</depend>
  <depend>openpose_ros_msgs</depend>
  <depend>petra_interfaces</depend>
  <!-- <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
